# freelance_tutor

./: .env-non-dev  .test.env  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 2023_11_10_1149-135d63b0783a_creat_table_user.py  2023_11_10_1212-216631897fda_creat_table_subject.py  2023_11_10_1238-8de269386cfd_delit_columm_id_in_table_subject.py  2023_11_12_1002-20001a696480_create_table_subjectuserassociation.py  2023_12_23_1322-4206985b6bee_create_table_user.py  2023_12_23_1323-6731e3b89336_create_table_subject_and_user_subject_.py  2023_12_23_1324-02b18827cff8_create_table_profile.py  2024_01_29_1837-efdf75f8f104_create_table_order.py  2024_02_04_1619-5dbd9a9ff316_delete_uniqueconstraint_name_idx_unique_.py  2024_02_04_1655-fce6fc94dde2_create_table_user.py  2024_02_04_1656-6985982cc300_create_table_subject.py  2024_02_04_1657-676856a03089_create_table_profile.py  2024_02_04_1657-ca4442e4e877_create_table_subjectuserassociation.py  2024_02_04_1658-b2a17a368aac_create_table_order.py  2024_02_17_1823-6d95c13baeea_added_columm_balance_in_table_profile.py  2024_02_19_0945-380bb3f1d9fe_create_table_confirmationkeys.py  2024_03_15_2043-e3fce4eca386_added_a_column_reting.py  2024_03_16_1314-301aa1b4f785_added_a_column_price_in_table_subject.py
api_v1/: __init__.py  schemas_confirmation_keys.py
api_v1/auth/: config.py  models.py  (+1 more)
core/: __init__.py  config.py  db_helper.py
test/: conftest.py
tests/: conftest.py  test_authorization.py  test_inaccessibility_api.py  test_inaccessibility_by_customer.py
(+59 files in other folders)
